# skillshare-cli

./: README.md  install.ps1  install.sh  pyproject.toml  run.py
.github/workflows/: release.yml
skillshare_cli/: authflow.py  main.py  notifier_gui.py  notify.py  panel_gui.py  statusline.py
skillshare_cli/local/: detect.py  fingerprint.py  redact.py  scan.py
