[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillshare-cli"
version = "1.0.0"
description = "Command-line client for the SkillShare registry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aniket Kumar", email = "aniket.lnu@think41.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["skills", "mcp", "registry", "ai", "claude"]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Source = "https://github.com/Aniket-think41/skillshare-cli"
BugTracker = "https://github.com/Aniket-think41/skillshare-cli/issues"

[project.scripts]
skillshare = "skillshare_cli.main:main"

[tool.setuptools]
packages = ["skillshare_cli", "skillshare_cli.local"]
